--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,18 @@
 </head>
 
 <body>
-  <div id="app"></div>
-  <script type="module" src="/src/main.ts"></script>
+  <div>
+    <header>
+      <span>JalukOne</span>
+    </header>
+    <main>
+      <h1>Hello</h1>
+    </main>
+    <footer>
+      <p>Create by JalukOne</p>
+    </footer>
+  </div>
+  <script type="module" src="/ts/main.ts"></script>
 </body>
 
 </html>
